fix: dark mode for help text box

--- a/assets/css/tailwind_compiled.css
+++ b/assets/css/tailwind_compiled.css
@@ -1016,6 +1016,15 @@ video {
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
+.help-box:where(.dark, .dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity));
+}
+
 textarea {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
